--- a/Latmarket/assets/style-index.css
+++ b/Latmarket/assets/style-index.css
@@ -7,20 +7,7 @@ box-shadow: 0 0 1.5rem rgba(0, 0, 0, 30%);
 
 }
 
-.neon {
-
-position: absolute;
-top: 0;
-left: 50%;
-width: 0%;
-height: 5px;
-box-shadow: 0 0 20px var(--secondcolor), 0 0 10px var(--secondcolor);
-background: var(--secondcolor);
-transform: translate(-50%);
-animation: expandWidth 1s ease-out forwards;
-
-}
-    
+   
 @keyframes expandWidth {
 from {
     width: 0%;
@@ -70,157 +57,102 @@ font-size: 1rem;
 
 .search{
 
-padding: 7rem 10% 7rem 10%;
-background: var(--secondcolor);
-
-}
-
-
-.searchbox{
-
+padding: 5rem 10% 7rem 10%;
+background: var(--maincolor-2);
 display: flex;
 justify-content: center;
 align-items: center;
 flex-wrap: wrap;
-margin-top: 3rem;
-background: var(--maincolor);
-border-radius: 5rem;
-padding: 1rem;
-box-shadow: 0 0 1.5rem rgba(0, 0, 0, 50%);
-        
+
 }
 
-.searchbox .box{
+.search .box{
 
-width:  auto;
-padding: 0 .8rem;
-height: 3rem;
+width: 30%;
+height: 17rem;
+border-radius: 1rem;
 position: relative;
-z-index: 2;
-display: flex;
-justify-content: center;
-align-items: center;
+overflow: hidden;
 cursor: pointer;
-flex-direction: column;
-background: var(--maincolor);
-border-radius: 5rem;
+margin: 1rem;
 
 }
 
-.searchbox .box.active{
+.search .box a{
 
-background: var(--secondcolor);
-
-}
-
-
-.searchbox .box:hover{
-
-background: rgba(255, 180, 0, 30%);
-
-}
-
-.searchbox .box h2{
-
-color: var(--textcolor);
-width: 100%;
-text-align: center;
-font-size: 1rem;
-font-weight: normal;
-
-}
-
-.dynamic-line{
-
-display: flex;
-justify-content: center;
-align-items: center;
-position: relative;
-    
-}
-
-.dline{
-
-width: 90%;
-height: 3px;
-background: var(--dobcolor);
-margin-top: 3rem;
-
-}
-
-.triangle{
-
-font-size: 2rem;
-color: var(--dobcolor);
 position: absolute;
-top: 45%;
-left: 5%;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 100%;
+height: 100%;
+z-index: 1;
 
 }
 
+.search .box .text{
 
-.grupbox{
+position: absolute;
+bottom: 1.5rem;
+left: 1.5rem;
+color: var(--textcolor-2);
+
+}
+
+.h2text{
 
 display: flex;
-justify-content: center;
 align-items: center;
-flex-wrap: wrap;
-margin-top: 4rem;
-display: none;
+margin-bottom: 1rem;
 
 }
 
+.h2text h2{
 
-.grupbox .box{
+margin-left: .5rem;
 
-width:  auto;
+}
+
+.search .box .text .icon{
+
+width: 3.5rem;
 height: 3.5rem;
-box-shadow: 0 0 1.5rem rgba(0, 0, 0, 50%);
-margin: .7rem .7rem;
-padding: 0 .8rem;
-cursor: pointer;
 display: flex;
 justify-content: center;
 align-items: center;
-background: var(--maincolor);
-position: relative;
-border-radius: 5rem;
+border-radius: 1rem;
+backdrop-filter: blur(5px);
+box-shadow: var(--shadow);
 
 }
 
-.link{
+.search .box .text .icon img{
+
+width: 70%;
+height: 70%;
+filter: brightness(100%);
+
+}
+
+.search .box .text p{
+
+font-size: 1rem;
+
+}
+
+.boximg{
 
 width: 100%;
 height: 100%;
-position: absolute;
-
-}
-
-.grupbox .box:hover{
-
-background: rgba(255, 180, 0, 0%);
+object-fit: cover;
+filter: brightness(80%);
 
 }
 
 
-.grupbox .box i{
+.search .box:hover .boximg{
 
-color: var(--secondcolor);
-font-size: 1.3rem;
-
-}
-
-.grupbox .box p{
-
-color: var(--textcolor);
-margin: 0 .5rem;
-font-size: 1rem;
+transform: scale(105%);
 
 }
-
-
-#carbox.active, #darbbox.active, #nekustbox.active, #celtbox.active, #elektrobox.active, #drebbox.active, #majbox.active{
-
-display: flex;
-
-}
+    
