--- a/Latmarket/assets/style-index.css
+++ b/Latmarket/assets/style-index.css
@@ -1,9 +1,8 @@
 .stats{
 
-background: var(--maincolor);
+background: var(--maincolor-2);
 padding: 4rem 15%;
 position: relative;
-box-shadow: 0 0 1.5rem rgba(0, 0, 0, 30%);
 
 }
 
