--- a/Latmarket/assets/style-main.css
+++ b/Latmarket/assets/style-main.css
@@ -147,7 +147,8 @@ overflow: hidden;
 .proimage img{
 
 width: 100%;
-height: auto;
+height: 100%;
+object-fit: cover;
 
 }
 
@@ -819,7 +820,8 @@ overflow: hidden;
 .profile-image img{
 
 width: 100%;
-height: auto;
+height: 100%;
+object-fit: cover;
 
 }
 
@@ -954,6 +956,7 @@ transform: rotateY(720deg);
 width: 75%;
 height: 100%;
 display: none;
+background: var(--maincolor-2);
 
 }
 
@@ -962,6 +965,7 @@ display: none;
 display: flex;
 
 }
+/* -------------settings */
 
 #settings-menu form{
 
@@ -975,23 +979,6 @@ flex-wrap: wrap;
 
 }
 
-/* -------------settings */
-
-#settings-menu .box{
-
-width: 40%;
-height: 100%;
-box-shadow: var(--shadow);
-color: var(--textcolor);
-padding: 1rem;
-margin: 1rem;
-display: flex;
-justify-content: center;
-align-items: center;
-border-radius: 2rem;
-
-}
-
 .box-flex{
 
 display: flex;
@@ -1002,8 +989,36 @@ height: 15%;
 
 }
 
+#settings-menu .box{
 
-.avatar-pre{
+width: 40%;
+height: 100%;
+color: var(--textcolor);
+background: var(--maincolor);
+padding: 1rem;
+margin: 1rem;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 2rem;
+
+}
+
+.box.avatar h1{
+
+font-size: 1rem;
+margin-right: 2rem;
+display: none;
+
+}
+
+.box.avatar h1.active{
+
+display: block;
+
+}
+
+.avatarPre{
 
 width: 5rem;
 height: 5rem;
@@ -1019,6 +1034,7 @@ width: 5rem;
 height: 5rem;
 margin-right: 2rem;
 position: relative;
+display: none;
 
 }
 
@@ -1026,11 +1042,10 @@ position: relative;
 
 color: red;
 cursor: pointer;
-display: none;
 
 }
 
-.close-prew.active i{
+.close-prew.active{
 
 display: block;
 
@@ -1044,7 +1059,7 @@ right: -10px;
 
 }
 
-.avatar-pre img{
+.avatarPre img{
 
 width: 100%;
 height: 100%;
@@ -1176,7 +1191,7 @@ align-items: center;
 flex-wrap: wrap;
 margin-top: 2rem;
 border-radius: 2rem;
-box-shadow: 0 0 1.5rem rgba(0, 0, 0, 10%);
+background: var(--maincolor);
 
 }
 
