--- a/Latmarket/admin/assets/style-main.css
+++ b/Latmarket/admin/assets/style-main.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 *{
 padding: 0%;
 margin: 0%;
 box-sizing: border-box;
-font-family: "Raleway", sans-serif;
+font-family: "Mulish", sans-serif;
 text-decoration: none;
 border: none;
 outline: none;
@@ -27,7 +27,7 @@ letter-spacing: .1rem;
 
 body{
 
-background: linear-gradient(120deg, var(--secondcolor) 50%, var(--maincolor-2) 50%);
+background: linear-gradient(120deg, var(--secondcolor) 0%, var(--secondcolor) 50%, var(--maincolor-2) 51%, var(--maincolor-2) 100%);
 
 }
 
@@ -103,8 +103,6 @@ padding: 5rem 20%;
 
 width: 100%;
 height: 15rem;
-background-color: rgba(255, 255, 255, 0.2);
-box-shadow: var(--shadow);
 border-radius: 1rem;
 padding: 1rem;
 display: flex;
@@ -115,7 +113,7 @@ align-items: center;
 
 .sakumlapa-Title .box{
 
-background-color: rgba(255, 255, 255, 0.4);
+background: var(--maincolor);
 width: 50%;
 height: 100%;
 margin: 0 1rem;
